@@ -1,15 +1,15 @@
 3,2,1,2,1,2,2,2,2,2
 3,2,2,1,2,2,2,3,2,3
 6,3,4,5,5,5,7,6,8,8
-5,3,4,4,5,5,5,6,6,7
+5,3,4,4,5,4,6,6,6,7
 3,2,2,2,2,2,2,2,3,3
 3,2,2,1,2,2,2,3,2,3
 2,0,1,0,1,1,0,1,0,1
-7,5,6,7,7,9,10,10,12,12
+7,5,6,6,8,9,9,11,12,12
 5,3,4,4,5,9,12,14,16,18
 3,1,1,1,1,1,1,1,1,1
 3,1,1,1,1,1,2,1,1,2
-4,2,3,3,2,4,3,4,4,4
+4,2,3,2,3,4,3,4,4,4
 4,2,2,3,2,3,3,3,4,4
 3,1,1,1,1,2,1,1,2,1
 3,1,1,1,1,1,2,1,1,2
@@ -20,19 +20,19 @@
 3,1,2,1,1,2,1,2,2,2
 3,1,1,2,1,2,1,2,1,2
 4,2,2,2,2,3,2,3,3,4
-5,2,3,3,3,4,4,5,4,6
+4,3,3,3,3,4,4,5,4,6
 3,1,1,2,1,2,1,2,5,6
-20,21,29,35,42,49,56,63,70,77
+20,21,29,35,42,49,56,63,70,76
 2,0,1,0,1,0,0,1,0,1
 9,8,9,10,13,23,36,36,36,48
 4,2,2,2,2,3,2,3,3,4
 3,1,2,4,5,6,7,8,9,10
 4,3,2,3,4,3,4,5,8,9
-3,1,2,1,1,2,2,4,4,5
+3,1,1,2,1,2,2,4,4,5
 2,1,3,4,5,6,7,8,9,10
 27,54,81,108,135,162,189,216,244,271
 2,4,6,8,10,13,15,17,19,21
-3,1,1,2,3,5,6,7,8,9
+3,1,1,1,4,5,6,7,8,9
 2,4,6,8,10,13,15,17,19,21
 13,27,40,54,67,81,94,108,122,135
 2,4,6,8,10,13,15,17,19,21
@@ -45,32 +45,29 @@
 2,4,6,8,10,13,15,17,19,21
 2,0,1,0,1,0,1,0,1,1
 2,5,7,10,12,15,18,20,23,25
-2,0,1,0,0,1,0,1,0,0
+2,0,0,1,0,1,0,0,1,0
 2,1,1,0,1,1,3,3,3,4
-3,2,1,2,1,2,2,2,2,2
-3,2,2,1,2,2,2,2,3,2
-5,4,4,4,5,6,6,7,7,8
-5,3,4,4,4,5,5,6,7,6
-3,2,2,2,1,3,2,2,3,2
-3,2,2,1,2,2,2,2,3,2
-2,0,1,0,1,1,0,1,0,1
-7,5,6,6,8,8,10,10,11,13
-5,3,4,4,4,10,12,14,16,18
-4,2,3,3,3,3,3,4,4,4
 8,7,122,137,137,274,274,411,411,411
-4,2,2,3,3,3,3,3,4,4
-5,4,4,5,5,5,6,7,7,8
-3,2,2,2,1,3,2,2,3,2
-2,1,1,1,1,0,1,1,1,1
-2,1,1,1,1,0,1,1,1,1
-2,1,1,1,1,0,1,1,1,1
-2,1,0,1,1,0,1,0,1,1
+4,2,2,3,3,2,4,3,4,4
+5,4,4,4,6,5,6,7,7,8
+3,2,2,2,1,2,3,2,3,2
+2,1,1,1,0,1,1,1,1,1
+2,1,1,1,0,1,1,1,1,1
+2,1,1,1,0,1,1,1,1,1
+2,1,0,1,0,1,1,0,1,1
 3,1,1,1,2,1,1,2,1,2
 4,1,1,1,1,0,1,1,0,1
-5,2,2,1,2,1,1,1,1,2
+5,2,2,1,2,1,1,1,1,1
 3,1,1,1,0,1,0,1,0,1
-2,1,0,0,1,0,0,0,1,0
-2,1,0,0,1,0,0,0,1,0
-2,1,0,0,1,0,0,0,1,0
+2,1,0,0,1,0,0,0,0,1
+2,1,0,0,1,0,0,0,0,1
+2,1,0,0,1,0,0,0,0,1
 2,0,1,0,0,0,0,1,0,0
 3,0,1,0,1,0,0,1,0,0
+8,9,9,8,9,9,8,9,9,8
+3,0,1,0,0,1,0,0,1,0
+3,1,1,0,1,0,1,0,1,0
+4,1,1,0,1,0,1,1,0,1
+5,1,2,1,1,1,1,1,0,1
+4,1,0,1,1,0,1,0,1,0
+3,1,2,2,2,3,2,2,2,2
