@@ -1,1 +1,0 @@
-34,70,104,140,176,210,246,280,316,352
