@@ -1,76 +1,0 @@
-2,1,1,1,2,1,2,1,2,2
-2,1,2,1,1,2,2,2,2,2
-4,3,3,4,4,5,6,6,7,7
-3,3,3,3,4,5,5,5,6,6
-2,1,2,1,2,2,1,3,2,2
-2,1,2,1,1,2,2,2,2,2
-1,0,1,0,1,0,0,1,0,1
-5,4,5,6,7,8,8,10,11,12
-3,3,3,3,8,10,12,14,16,18
-1,1,1,1,0,1,1,1,1,1
-2,0,1,1,1,1,1,1,1,1
-3,1,2,3,2,3,3,3,4,3
-2,2,2,2,2,2,3,3,3,3
-2,0,1,1,1,1,1,1,2,1
-2,0,1,1,1,1,1,1,1,1
-1,0,0,1,0,0,0,1,0,0
-3,3,3,3,4,4,4,5,6,7
-2,2,2,6,8,10,12,14,16,18
-2,1,1,2,1,2,2,1,2,3
-2,1,1,1,1,1,1,2,1,2
-2,1,1,1,1,1,1,2,1,2
-2,2,1,2,2,2,2,3,3,3
-3,2,2,3,3,3,4,4,4,4
-2,1,1,1,1,1,1,4,6,6
-16,19,26,33,40,47,54,61,67,75
-1,0,1,0,0,1,0,0,1,0
-7,6,8,10,17,24,36,36,36,48
-2,2,1,2,2,2,2,3,3,3
-1,2,3,4,5,6,7,8,9,10
-3,2,2,2,3,3,6,7,8,9
-2,1,1,1,1,3,3,4,4,5
-1,2,3,4,5,6,7,8,9,10
-27,54,81,108,135,162,189,216,244,271
-2,4,6,8,10,13,15,17,19,21
-2,1,0,3,4,5,6,7,8,9
-2,4,6,8,10,13,15,17,19,21
-13,27,40,54,67,81,94,108,122,135
-2,4,6,8,10,13,15,17,19,21
-6,12,18,24,30,36,42,48,54,60
-6,12,18,24,30,36,42,48,54,60
-9,19,29,39,49,59,69,78,88,98
-2,4,6,8,10,13,15,17,19,21
-1,1,0,1,0,0,1,2,2,2
-1,2,3,4,5,6,7,8,9,10
-2,4,6,8,10,13,15,17,19,21
-1,0,1,0,0,1,0,1,1,2
-2,5,7,10,12,15,18,20,23,25
-1,0,0,1,0,0,1,0,0,1
-1,1,0,1,1,2,3,3,3,4
-2,1,1,1,2,1,2,1,2,2
-2,1,1,2,1,2,2,2,2,2
-4,2,4,4,4,5,5,6,7,7
-3,3,3,3,4,4,5,5,6,6
-2,1,2,1,2,1,2,2,2,3
-2,1,1,2,1,2,2,2,2,2
-1,0,1,0,1,0,0,1,0,1
-5,4,5,5,7,8,9,9,11,11
-3,3,3,3,8,10,12,14,16,18
-3,1,2,3,2,3,3,3,4,4
-6,6,125,137,137,274,274,411,411,411
-3,1,2,2,2,3,3,3,3,3
-4,2,4,4,4,5,6,6,6,8
-2,1,2,1,2,1,2,2,2,3
-1,1,0,1,1,0,1,1,0,1
-1,1,0,1,1,0,1,1,0,1
-1,1,0,1,1,0,1,1,0,1
-1,1,0,0,1,0,1,0,1,0
-2,0,1,1,1,1,1,2,1,1
-3,0,1,1,0,1,1,0,1,0
-4,1,1,2,1,1,1,1,1,1
-2,1,0,1,0,1,0,0,1,0
-1,1,0,0,0,0,1,0,0,0
-1,1,0,0,0,0,1,0,0,0
-1,1,0,0,0,0,1,0,0,0
-1,0,1,0,0,0,0,0,0,0
-2,0,0,1,0,0,1,0,0,0
