@@ -1,15 +1,15 @@
 3,5,6,8,9,11,13,15,17,19
 3,5,7,8,10,12,14,17,19,22
 6,9,13,18,23,28,35,41,49,57
-5,8,12,16,21,26,31,37,43,50
+5,8,12,16,21,25,31,37,43,50
 3,5,7,9,11,13,15,17,20,23
 3,5,7,8,10,12,14,17,19,22
 2,2,3,3,4,5,5,6,6,7
-7,12,18,25,32,41,51,61,73,85
+7,12,18,24,32,41,50,61,73,85
 5,8,12,16,21,30,42,56,72,90
 3,4,5,6,7,8,9,10,11,12
 3,4,5,6,7,8,10,11,12,14
-4,6,9,12,14,18,21,25,29,33
+4,6,9,11,14,18,21,25,29,33
 4,6,8,11,13,16,19,22,26,30
 3,4,5,6,7,9,10,11,13,14
 3,4,5,6,7,8,10,11,12,14
@@ -20,19 +20,19 @@
 3,4,6,7,8,10,11,13,15,17
 3,4,5,7,8,10,11,13,14,16
 4,6,8,10,12,15,17,20,23,27
-5,7,10,13,16,20,24,29,33,39
+4,7,10,13,16,20,24,29,33,39
 3,4,5,7,8,10,11,13,18,24
-20,41,70,105,147,196,252,315,385,462
+20,41,70,105,147,196,252,315,385,461
 2,2,3,3,4,4,4,5,5,6
 9,17,26,36,49,72,108,144,180,228
 4,6,8,10,12,15,17,20,23,27
 3,4,6,10,15,21,28,36,45,55
 4,7,9,12,16,19,23,28,36,45
-3,4,6,7,8,10,12,16,20,25
+3,4,5,7,8,10,12,16,20,25
 2,3,6,10,15,21,28,36,45,55
 27,81,162,270,405,567,756,972,1216,1487
 2,6,12,20,30,43,58,75,94,115
-3,4,5,7,10,15,21,28,36,45
+3,4,5,6,10,15,21,28,36,45
 2,6,12,20,30,43,58,75,94,115
 13,40,80,134,201,282,376,484,606,741
 2,6,12,20,30,43,58,75,94,115
@@ -45,32 +45,29 @@
 2,6,12,20,30,43,58,75,94,115
 2,2,3,3,4,4,5,5,6,7
 2,7,14,24,36,51,69,89,112,137
-2,2,3,3,3,4,4,5,5,5
+2,2,2,3,3,4,4,4,5,5
 2,3,4,4,5,6,9,12,15,19
-3,5,6,8,9,11,13,15,17,19
-3,5,7,8,10,12,14,16,19,21
-5,9,13,17,22,28,34,41,48,56
-5,8,12,16,20,25,30,36,43,49
-3,5,7,9,10,13,15,17,20,22
-3,5,7,8,10,12,14,16,19,21
-2,2,3,3,4,5,5,6,6,7
-7,12,18,24,32,40,50,60,71,84
-5,8,12,16,20,30,42,56,72,90
-4,6,9,12,15,18,21,25,29,33
 8,15,137,274,411,685,959,1370,1781,2192
-4,6,8,11,14,17,20,23,27,31
-5,9,13,18,23,28,34,41,48,56
-3,5,7,9,10,13,15,17,20,22
-2,3,4,5,6,6,7,8,9,10
-2,3,4,5,6,6,7,8,9,10
-2,3,4,5,6,6,7,8,9,10
-2,3,3,4,5,5,6,6,7,8
+4,6,8,11,14,16,20,23,27,31
+5,9,13,17,23,28,34,41,48,56
+3,5,7,9,10,12,15,17,20,22
+2,3,4,5,5,6,7,8,9,10
+2,3,4,5,5,6,7,8,9,10
+2,3,4,5,5,6,7,8,9,10
+2,3,3,4,4,5,6,6,7,8
 3,4,5,6,8,9,10,12,13,15
 4,5,6,7,8,8,9,10,10,11
-5,7,9,10,12,13,14,15,16,18
+5,7,9,10,12,13,14,15,16,17
 3,4,5,6,6,7,7,8,8,9
-2,3,3,3,4,4,4,4,5,5
-2,3,3,3,4,4,4,4,5,5
-2,3,3,3,4,4,4,4,5,5
+2,3,3,3,4,4,4,4,4,5
+2,3,3,3,4,4,4,4,4,5
+2,3,3,3,4,4,4,4,4,5
 2,2,3,3,3,3,3,4,4,4
 3,3,4,4,5,5,5,6,6,6
+8,17,26,34,43,52,60,69,78,86
+3,3,4,4,4,5,5,5,6,6
+3,4,5,5,6,6,7,7,8,8
+4,5,6,6,7,7,8,9,9,10
+5,6,8,9,10,11,12,13,13,14
+4,5,5,6,7,7,8,8,9,9
+3,4,6,8,10,13,15,17,19,21
