@@ -1,76 +1,0 @@
-2,3,4,5,7,8,10,11,13,15
-2,3,5,6,7,9,11,13,15,17
-4,7,10,14,18,23,29,35,42,49
-3,6,9,12,16,21,26,31,37,43
-2,3,5,6,8,10,11,14,16,18
-2,3,5,6,7,9,11,13,15,17
-1,1,2,2,3,3,3,4,4,5
-5,9,14,20,27,35,43,53,64,76
-3,6,9,12,20,30,42,56,72,90
-1,2,3,4,4,5,6,7,8,9
-2,2,3,4,5,6,7,8,9,10
-3,4,6,9,11,14,17,20,24,27
-2,4,6,8,10,12,15,18,21,24
-2,2,3,4,5,6,7,8,10,11
-2,2,3,4,5,6,7,8,9,10
-1,1,1,2,2,2,2,3,3,3
-3,6,9,12,16,20,24,29,35,42
-2,4,6,12,20,30,42,56,72,90
-2,3,4,6,7,9,11,12,14,17
-2,3,4,5,6,7,8,10,11,13
-2,3,4,5,6,7,8,10,11,13
-2,4,5,7,9,11,13,16,19,22
-3,5,7,10,13,16,20,24,28,32
-2,3,4,5,6,7,8,12,18,24
-16,35,61,94,134,181,235,296,363,438
-1,1,2,2,2,3,3,3,4,4
-7,13,21,31,48,72,108,144,180,228
-2,4,5,7,9,11,13,16,19,22
-1,3,6,10,15,21,28,36,45,55
-3,5,7,9,12,15,21,28,36,45
-2,3,4,5,6,9,12,16,20,25
-1,3,6,10,15,21,28,36,45,55
-27,81,162,270,405,567,756,972,1216,1487
-2,6,12,20,30,43,58,75,94,115
-2,3,3,6,10,15,21,28,36,45
-2,6,12,20,30,43,58,75,94,115
-13,40,80,134,201,282,376,484,606,741
-2,6,12,20,30,43,58,75,94,115
-6,18,36,60,90,126,168,216,270,330
-6,18,36,60,90,126,168,216,270,330
-9,28,57,96,145,204,273,351,439,537
-2,6,12,20,30,43,58,75,94,115
-1,2,2,3,3,3,4,6,8,10
-1,3,6,10,15,21,28,36,45,55
-2,6,12,20,30,43,58,75,94,115
-1,1,2,2,2,3,3,4,5,7
-2,7,14,24,36,51,69,89,112,137
-1,1,1,2,2,2,3,3,3,4
-1,2,2,3,4,6,9,12,15,19
-2,3,4,5,7,8,10,11,13,15
-2,3,4,6,7,9,11,13,15,17
-4,6,10,14,18,23,28,34,41,48
-3,6,9,12,16,20,25,30,36,42
-2,3,5,6,8,9,11,13,15,18
-2,3,4,6,7,9,11,13,15,17
-1,1,2,2,3,3,3,4,4,5
-5,9,14,19,26,34,43,52,63,74
-3,6,9,12,20,30,42,56,72,90
-3,4,6,9,11,14,17,20,24,28
-6,12,137,274,411,685,959,1370,1781,2192
-3,4,6,8,10,13,16,19,22,25
-4,6,10,14,18,23,29,35,41,49
-2,3,5,6,8,9,11,13,15,18
-1,2,2,3,4,4,5,6,6,7
-1,2,2,3,4,4,5,6,6,7
-1,2,2,3,4,4,5,6,6,7
-1,2,2,2,3,3,4,4,5,5
-2,2,3,4,5,6,7,9,10,11
-3,3,4,5,5,6,7,7,8,8
-4,5,6,8,9,10,11,12,13,14
-2,3,3,4,4,5,5,5,6,6
-1,2,2,2,2,2,3,3,3,3
-1,2,2,2,2,2,3,3,3,3
-1,2,2,2,2,2,3,3,3,3
-1,1,2,2,2,2,2,2,2,2
-2,2,2,3,3,3,4,4,4,4
