@@ -47,30 +47,27 @@
 5,14961.35,306.6,1
 5,9453.5,7270.8,1
 5,2690.05,1825,1
-6,6508.333333,5580.85,1
-6,5404.166667,3650,1
-6,1370.833333,,1
-6,3212.5,,2
-6,10112.5,,2
-6,5404.166667,3650,1
-6,94583.33333,,2
-6,4875,3872.65,6
-6,3212.5,832.2,2
-6,2777.779167,,1
-7,72634,2083.333333,137
-8,3212.5,,1
-8,2777.779167,,2
-8,20833.33333,,4
-9,20833.33333,,1
-9,20833.33333,,1
-9,20833.33333,,1
-9,34691.66667,,1
-9,10112.5,,1
-10,3212.5,,1
-10,2777.779167,,2
-10,20833.33333,,4
-11,20833.33333,,1
-11,20833.33333,,1
-11,20833.33333,,1
-11,34691.66667,,1
-11,10112.5,,1
+6,72634,2083.333333,137
+7,3212.5,,1
+7,2777.779167,,2
+7,20833.33333,,4
+8,20833.33333,,1
+8,20833.33333,,1
+8,20833.33333,,1
+8,34691.66667,,1
+8,10112.5,,1
+9,3212.5,,1
+9,2777.779167,,2
+9,20833.33333,,4
+10,20833.33333,,1
+10,20833.33333,,1
+10,20833.33333,,1
+10,34691.66667,,1
+10,10112.5,,1
+11,2576.9,91.25,1
+11,12362.55,2190,1
+11,5767,,1
+11,4088,3650,1
+11,1978.3,1522.05,1
+11,4303.35,2817.8,1
+11,6022.5,365,1
