@@ -48,30 +48,27 @@ ECLSS,CDRA,Air Pump Two-Stage ORU,1,6508.333333,5580.85,1
 ,,Separator Filter,5,14961.35,306.6,1
 ,,Start-up Filter,5,9453.5,7270.8,1
 ,,Water Delivery,5,2690.05,1825,1
-,CO2 Injector,Air Pump Two-Stage ORU,6,6508.333333,5580.85,1
-,,Blower,6,5404.166667,3650,1
-,,Check Valves,6,1370.833333,,1
-,,Dessicant Beds,6,3212.5,,2
-,,Heat Controller,6,10112.5,,2
-,,Precooler,6,5404.166667,3650,1
-,,Pump Fan Motor Controller,6,94583.33333,,2
-,,Selector Valves,6,4875,3872.65,6
-,,Sorbent Beds (Zeolite),6,3212.5,832.2,2
-,,Compressor 1 (Mars to 1atm),6,2777.779167,,1
-,GLS,LED Growth Light ORU,7,72634,2083.333333,137
-ISRU (Crew System),AP,Zeolite and Support Structure,8,3212.5,,1
-,,Compressor,8,2777.779167,,2
-,,Cryocooler,8,20833.33333,,4
-,SP,Mixing Auger,9,20833.33333,,1
-,,Feed Cone,9,20833.33333,,1
-,,Horizontal Feed Auger,9,20833.33333,,1
-,,Condensing Heat Exchanger,9,34691.66667,,1
-,,Oven Heater,9,10112.5,,1
-ISRU (Pre Deploy),AP,Zeolite and Support Structure,10,3212.5,,1
-,,Compressor,10,2777.779167,,2
-,,Cryocooler,10,20833.33333,,4
-,SP,Mixing Auger,11,20833.33333,,1
-,,Feed Cone,11,20833.33333,,1
-,,Horizontal Feed Auger,11,20833.33333,,1
-,,Condensing Heat Exchanger,11,34691.66667,,1
-,,Oven Heater,11,10112.5,,1
+,GLS,LED Growth Light ORU,6,72634,2083.333333,137
+ISRU (Crew System),AP,Zeolite and Support Structure,7,3212.5,,1
+,,Compressor,7,2777.779167,,2
+,,Cryocooler,7,20833.33333,,4
+,SP,Mixing Auger,8,20833.33333,,1
+,,Feed Cone,8,20833.33333,,1
+,,Horizontal Feed Auger,8,20833.33333,,1
+,,Condensing Heat Exchanger,8,34691.66667,,1
+,,Oven Heater,8,10112.5,,1
+ISRU (Pre Deploy),AP,Zeolite and Support Structure,9,3212.5,,1
+,,Compressor,9,2777.779167,,2
+,,Cryocooler,9,20833.33333,,4
+,SP,Mixing Auger,10,20833.33333,,1
+,,Feed Cone,10,20833.33333,,1
+,,Horizontal Feed Auger,10,20833.33333,,1
+,,Condensing Heat Exchanger,10,34691.66667,,1
+,,Oven Heater,10,10112.5,,1
+,OGA,Hydrogen Sensor,11,2576.9,91.25,1
+,,Inlet Deionizing Bed,11,12362.55,2190,1
+,,Nitrogen Purge ORU,11,5767,,1
+,,Oxygen Outlet,11,4088,3650,1
+,,Power Supply Module,11,1978.3,1522.05,1
+,,Process Controller,11,4303.35,2817.8,1
+,,Pump,11,6022.5,365,1
