@@ -1,0 +1,75 @@
+ECLSS,CDRA,Air Pump Two-Stage ORU,3,2,1,2,1,2,2,2,2,2
+,,Blower,3,2,2,1,2,2,2,3,2,3
+,,Check Valves,6,3,4,5,5,5,7,6,8,8
+,,Dessicant Beds,5,3,4,4,5,4,6,6,6,7
+,,Heat Controller,3,2,2,2,2,2,2,2,3,3
+,,Precooler,3,2,2,1,2,2,2,3,2,3
+,,Pump Fan Motor Controller,2,0,1,0,1,1,0,1,0,1
+,,Selector Valves,7,5,6,6,8,9,9,11,12,12
+,,Sorbent Beds (Zeolite),5,3,4,4,5,9,12,14,16,18
+,ORA,Air Pump Two-Stage ORU,3,1,1,1,1,1,1,1,1,1
+,,Blower,3,1,1,1,1,1,2,1,1,2
+,,Check Valves,4,2,3,2,3,4,3,4,4,4
+,,Dessicant Beds,4,2,2,3,2,3,3,3,4,4
+,,Heat Controller,3,1,1,1,1,2,1,1,2,1
+,,Precooler,3,1,1,1,1,1,2,1,1,2
+,,Pump Fan Motor Controller,2,0,0,1,0,0,1,0,1,0
+,,Selector Valves,5,3,4,3,5,4,6,5,6,7
+,,Sorbent Beds (Zeolite),4,2,2,4,8,10,12,14,16,18
+,CCAA x6,Condensing Heat Exchanger,3,2,1,2,2,2,2,2,2,3
+,,Electronic Interface Box (EIB),3,1,2,1,1,2,1,2,2,2
+,,Fan Delta Pressure Sensor,3,1,1,2,1,2,1,2,1,2
+,,Heat Exchanger Liquid Sensor,4,2,2,2,2,3,2,3,3,4
+,,Inlet ORU,4,3,3,3,3,4,4,5,4,6
+,,Pressure Transducer,3,1,1,2,1,2,1,2,5,6
+,,Temperature Control Check Valve (TCCV),20,21,29,35,42,49,56,63,70,76
+,,Temperature Sensor,2,0,1,0,1,0,0,1,0,1
+,,Water Separator,9,8,9,10,13,23,36,36,36,48
+,,Water Separator Liquid Sensor,4,2,2,2,2,3,2,3,3,4
+,UPA,Distillation Assembly,3,1,2,4,5,6,7,8,9,10
+,,Firmware Controller Assembly,4,3,2,3,4,3,4,5,8,9
+,,Fluids Control and Pump Assembly,3,1,1,2,1,2,2,4,4,5
+,,Pressure Control and Pump Assembly,2,1,3,4,5,6,7,8,9,10
+,,Recycle Filter Tank Assembly,27,54,81,108,135,162,189,216,244,271
+,,Separator Plumbing Assembly,2,4,6,8,10,13,15,17,19,21
+,WPA,Catalytic Reactor,3,1,1,1,4,5,6,7,8,9
+,,Gas Separator,2,4,6,8,10,13,15,17,19,21
+,,Ion Exchange Bed,13,27,40,54,67,81,94,108,122,135
+,,Microbial Check Valve,2,4,6,8,10,13,15,17,19,21
+,,Multifiltration Bed #1,6,12,18,24,30,36,42,48,54,60
+,,Multifiltration Bed #2,6,12,18,24,30,36,42,48,54,60
+,,Particulate Filter,9,19,29,39,49,59,69,78,88,98
+,,pH Adjuster,2,4,6,8,10,13,15,17,19,21
+,,Process Controller,2,1,0,1,1,0,1,1,1,2
+,,Pump Separator,2,1,3,4,5,6,7,8,9,10
+,,Reactor Health Sensor,2,4,6,8,10,13,15,17,19,21
+,,Sensor,2,0,1,0,1,0,1,0,1,1
+,,Separator Filter,2,5,7,10,12,15,18,20,23,25
+,,Start-up Filter,2,0,0,1,0,1,0,0,1,0
+,,Water Delivery,2,1,1,0,1,1,3,3,3,4
+,GLS,LED Growth Light ORU,8,7,122,137,137,274,274,411,411,411
+ISRU (Crew System),AP,Zeolite and Support Structure,4,2,2,3,3,2,4,3,4,4
+,,Compressor,5,4,4,4,6,5,6,7,7,8
+,,Cryocooler,3,2,2,2,1,2,3,2,3,2
+,SP,Mixing Auger,2,1,1,1,0,1,1,1,1,1
+,,Feed Cone,2,1,1,1,0,1,1,1,1,1
+,,Horizontal Feed Auger,2,1,1,1,0,1,1,1,1,1
+,,Condensing Heat Exchanger,2,1,0,1,0,1,1,0,1,1
+,,Oven Heater,3,1,1,1,2,1,1,2,1,2
+ISRU (Pre Deploy),AP,Zeolite and Support Structure,4,1,1,1,1,0,1,1,0,1
+,,Compressor,5,2,2,1,2,1,1,1,1,1
+,,Cryocooler,3,1,1,1,0,1,0,1,0,1
+,SP,Mixing Auger,2,1,0,0,1,0,0,0,0,1
+,,Feed Cone,2,1,0,0,1,0,0,0,0,1
+,,Horizontal Feed Auger,2,1,0,0,1,0,0,0,0,1
+,,Condensing Heat Exchanger,2,0,1,0,0,0,0,1,0,0
+,,Oven Heater,3,0,1,0,1,0,0,1,0,0
+,OGA,Hydrogen Sensor,8,9,9,8,9,9,8,9,9,8
+,,Inlet Deionizing Bed,3,0,1,0,0,1,0,0,1,0
+,,Nitrogen Purge ORU,3,1,1,0,1,0,1,0,1,0
+,,Oxygen Outlet,4,1,1,0,1,0,1,1,0,1
+,,Power Supply Module,5,1,2,1,1,1,1,1,0,1
+,,Process Controller,4,1,0,1,1,0,1,0,1,0
+,,Pump,3,1,2,2,2,3,2,2,2,2
+,,,,,,,,,,,,
+,,EVA Batt,34,70,104,140,176,210,246,280,316,352
